hphp/test/zend/bad/tests-classes/final_ctor2.php
<?php

class Base
{
	public final function Base()
	{
	}
}

class Works extends Base
{
}

class Extended extends Base
{
	public function __construct()
	{
	}
}

ReflectionClass::export('Extended');

?>